[tool.poetry]
name = "linkedin-api"
version = "2.1.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
beautifulsoup4 = "*"
lxml = "*"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
ipdb = "*"
black = "*"
pytest = "*"
pylint = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
